feat: production-ready foundry template with devkit integration
  - Integrated @credit-cooperative/devkit v1.0.0
  - Added advanced Foundry profiles (5 total)
  - Configured pre-commit hooks with Husky + lint-staged
  - Added Just automation for all development tasks
  - Enhanced CI/CD with caching and coverage
  - Comprehensive documentation (README + CONTRIBUTING)
  - Multi-chain RPC support (15+ networks)
  - VSCode integration with recommended extensions
  - Production artifact preparation scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,10 @@
 name: "CI"
 
+concurrency:
+  cancel-in-progress: true
+  group: ${{github.workflow}}-${{github.ref}}
+
 env:
-  API_KEY_ALCHEMY: ${{ secrets.API_KEY_ALCHEMY }}
   FOUNDRY_PROFILE: "ci"
 
 on:
@@ -13,6 +16,7 @@ on:
 
 jobs:
   lint:
+    name: "Lint & Format Check"
     runs-on: "ubuntu-latest"
     steps:
       - name: "Check out the repo"
@@ -25,21 +29,30 @@ jobs:
         uses: "oven-sh/setup-bun@v1"
 
       - name: "Install the Node.js dependencies"
-        run: "bun install"
+        run: "bun install --frozen-lockfile"
 
-      - name: "Lint the code"
-        run: "bun run lint"
+      - name: "Lint Solidity contracts"
+        run: 'bun solhint "{script,src,tests}/**/*.sol"'
+
+      - name: "Check Forge formatting"
+        run: "forge fmt --check"
+
+      - name: "Check Prettier formatting"
+        run: 'bun prettier --check "**/*.{json,md,yml}"'
 
       - name: "Add lint summary"
         run: |
-          echo "## Lint result" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
+          echo "## 🔍 Lint Results" >> $GITHUB_STEP_SUMMARY
+          echo "✅ All checks passed" >> $GITHUB_STEP_SUMMARY
 
   build:
+    name: "Build Contracts"
     runs-on: "ubuntu-latest"
     steps:
       - name: "Check out the repo"
         uses: "actions/checkout@v4"
+        with:
+          submodules: "recursive"
 
       - name: "Install Foundry"
         uses: "foundry-rs/foundry-toolchain@v1"
@@ -48,22 +61,36 @@ jobs:
         uses: "oven-sh/setup-bun@v1"
 
       - name: "Install the Node.js dependencies"
-        run: "bun install"
+        run: "bun install --frozen-lockfile"
 
-      - name: "Build the contracts and print their size"
+      - name: "Show the Foundry config"
+        run: "forge config"
+
+      - name: "Build contracts and print sizes"
         run: "forge build --sizes"
+
+      - name: "Cache build artifacts"
+        uses: "actions/cache/save@v4"
+        with:
+          key: "forge-artifacts-${{ github.sha }}"
+          path: |
+            out/
+            cache/
 
       - name: "Add build summary"
         run: |
-          echo "## Build result" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
+          echo "## 🔨 Build Results" >> $GITHUB_STEP_SUMMARY
+          echo "✅ Contracts compiled successfully" >> $GITHUB_STEP_SUMMARY
 
   test:
+    name: "Test Contracts"
     needs: ["lint", "build"]
     runs-on: "ubuntu-latest"
     steps:
       - name: "Check out the repo"
         uses: "actions/checkout@v4"
+        with:
+          submodules: "recursive"
 
       - name: "Install Foundry"
         uses: "foundry-rs/foundry-toolchain@v1"
@@ -72,21 +99,70 @@ jobs:
         uses: "oven-sh/setup-bun@v1"
 
       - name: "Install the Node.js dependencies"
-        run: "bun install"
+        run: "bun install --frozen-lockfile"
 
-      - name: "Show the Foundry config"
-        run: "forge config"
+      - name: "Restore cached build artifacts"
+        uses: "actions/cache/restore@v4"
+        with:
+          fail-on-cache-miss: true
+          key: "forge-artifacts-${{ github.sha }}"
+          path: |
+            out/
+            cache/
 
-      - name: "Generate a fuzz seed that changes weekly to avoid burning through RPC allowance"
+      - name: "Generate fuzz seed that changes weekly"
         run: >
           echo "FOUNDRY_FUZZ_SEED=$(
             echo $(($EPOCHSECONDS - $EPOCHSECONDS % 604800))
           )" >> $GITHUB_ENV
 
-      - name: "Run the tests"
-        run: "forge test"
+      - name: "Run tests"
+        run: "forge test --gas-report"
 
       - name: "Add test summary"
         run: |
-          echo "## Tests result" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
+          echo "## 🧪 Test Results" >> $GITHUB_STEP_SUMMARY
+          echo "✅ All tests passed" >> $GITHUB_STEP_SUMMARY
+
+  coverage:
+    name: "Test Coverage"
+    needs: ["lint", "build"]
+    runs-on: "ubuntu-latest"
+    steps:
+      - name: "Check out the repo"
+        uses: "actions/checkout@v4"
+        with:
+          submodules: "recursive"
+
+      - name: "Install Foundry"
+        uses: "foundry-rs/foundry-toolchain@v1"
+
+      - name: "Install Bun"
+        uses: "oven-sh/setup-bun@v1"
+
+      - name: "Install the Node.js dependencies"
+        run: "bun install --frozen-lockfile"
+
+      - name: "Restore cached build artifacts"
+        uses: "actions/cache/restore@v4"
+        with:
+          fail-on-cache-miss: true
+          key: "forge-artifacts-${{ github.sha }}"
+          path: |
+            out/
+            cache/
+
+      - name: "Generate coverage report"
+        run: "forge coverage --report lcov"
+
+      - name: "Upload coverage to Codecov"
+        uses: "codecov/codecov-action@v4"
+        with:
+          files: "./lcov.info"
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: false
+
+      - name: "Add coverage summary"
+        run: |
+          echo "## 📊 Coverage Report" >> $GITHUB_STEP_SUMMARY
+          echo "Coverage report uploaded to Codecov" >> $GITHUB_STEP_SUMMARY
